--- a/templates/home.html
+++ b/templates/home.html
@@ -2,47 +2,48 @@
 {% load static %}
 
 {% block content %}
-    
-    <!-- Main Section -->
-    <section class="main-section padding-y-sm">
-        <div class="container">
-           
-            <div class="main-banner-wrap">
-                <img src="{% static './images/banners/1.jpg' %}" alt="banner" class="img-fluid rounded">
-            </div>
+
+<!-- Main Section -->
+<section class="main-section padding-y-sm">
+    <div class="container">
+        <div class="main-banner-wrap">
+            <img src="{% static './images/banners/2.png' %}" alt="banner" class="img-fluid rounded">
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Product Section -->
-    <section class="section-name padding-y-sm bg">
-        <div class="container">
+<!-- Product Section -->
+<section class="section-name padding-y-sm bg">
+    <div class="container">
 
-            <header class="section-heading">
-                <a href="{% url 'products' %}" class="btn btn-outline-primary float-right">See all</a>
-                <h3 class="section-title">Popular products</h3>
-            </header><!-- sect-heading -->
+        <header class="section-heading">
+            <a href="{% url 'products' %}" class="btn btn-outline-primary float-right">See all</a>
+            <h3 class="section-title">Popular products</h3>
+        </header>
 
-
-           
-            <div class="row">
-                {% for product in products %}
-                <div class="col-md-3">
-                    <div class="card card-product-grid">
-                        <a href="{{ product.get_url }}" class="img-wrap"> <img src="{{ product.image.url }}"> </a>
-                        <figcaption class="info-wrap">
-                            <a href="#" class="title">{{ product.product_name }}</a>
-                            <div class="price mt-1">${{ product.price }}</div>
-                        </figcaption>
+        <div class="row">
+            {% for product in products %}
+            <div class="col-md-4 mb-4">
+                <div class="card card-product">
+                    <div class="img-wrap">
+                        <img src="{{ product.image.url }}" class="img-fluid product-image" alt="{{ product.product_name }}">
+                    </div>
+                    <div class="info-wrap">
+                        <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
+                        <div class="price mt-1">${{ product.price }}</div>
                     </div>
                 </div>
-                {% endfor %}
             </div>
+            {% endfor %}
+        </div>
 
-        </div><!-- container // -->
-    </section>
+    </div><!-- container // -->
+</section>
 
-    
+
+
 </body>
+
 </html>
 
 {% endblock %}
