--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,20 +1,28 @@
 {% load static %}
 <!-- Footer Section -->
-<footer class="section-footer border-top padding-y">
+<footer class="section-footer border-top bg-light padding-y">
     <div class="container">
         <section class="footer-bottom border-top row">
-            <div class="col-md-2">
-                <p class="text-muted"> &copy 2023 Omar Al-mehdhar </p>
+            <div class="col-md-4">
+                <p class="text-muted">&copy; 2023 Your Luxury Brand</p>
             </div>
-            <div class="col-md-8 text-md-center">
-                <span  class="px-2">omar@gmail.com</span>
-                <span  class="px-2">1235324343</span>
-                <span  class="px-2">business address</span>
+            <div class="col-md-4 text-center">
+                <span class="px-2">info@luxurybrand.com</span>
+                <span class="px-2">123-456-7890</span>
+                <span class="px-2">Luxury Street, City</span>
             </div>
-            <div class="col-md-2 text-md-right text-muted">
-                <i class="fab fa-lg fa-cc-visa"></i>
-                <i class="fab fa-lg fa-cc-stripe"></i>
-                <i class="fab fa-lg fa-cc-mastercard"></i>
+            <div class="col-md-2 text-right">
+                <a href="https://www.facebook.com/YourLuxuryBrand" target="_blank" class="text-muted px-2">
+                    <i class="fab fa-facebook-f fa-lg"></i>
+                </a>
+                <a href="https://www.instagram.com/YourLuxuryBrand" target="_blank" class="text-muted px-2">
+                    <i class="fab fa-instagram fa-lg"></i>
+                </a>
+            </div>
+            <div class="col-md-2 text-right">
+                <i class="fab fa-cc-visa fa-lg text-muted"></i>
+                <i class="fab fa-cc-stripe fa-lg text-muted"></i>
+                <i class="fab fa-cc-mastercard fa-lg text-muted"></i>
             </div>
         </section>
     </div><!-- //container -->
