--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,14 @@
 
     <!-- Custom JS -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+
+
+    {% block extra_css %}
+    {% endblock%}
+
+    {% block extra_js %}
+    {% endblock%}
+
 </head>
 
 <body>
@@ -36,6 +44,10 @@
 
 
     {% block content %}
+    
+    {% include 'includes/messages.html' %}
+
+
     <!-- Content -->
     {% endblock %}
 
