--- a/templates/products/cart.html
+++ b/templates/products/cart.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-   <section class="content-section padding-y bg">
+<section class="content-section padding-y bg">
     <div class="container">
 
         {% if not cart_items %}
@@ -23,8 +23,8 @@
                         <thead>
                             <tr>
                                 <th scope="col">Product</th>
-                                <th scope="col" width="100">Price</th>
                                 <th scope="col" width="100">Quantity</th>
+                                <th scope="col" width="100">Price</th>
                                 <th scope="col" class="text-right" width="200"></th>
                             </tr>
                         </thead>
@@ -104,7 +104,7 @@
                         <p class="text-center mb-3">
                             <img src="" height="26">
                         </p>
-                        <a href="#" class="btn btn-primary btn-block"> Checkout Securely </a>
+                        <a href="{% url 'checkout' %}" class="btn btn-dark btn-block"> Checkout Securely </a>
                         <a href="{% url 'products' %}" class="btn btn-light btn-block">Continue Shopping</a>
                     </div>
                 </div>
