--- a/templates/products/cart.html
+++ b/templates/products/cart.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
+{% block extra_css %}
+{% endblock %}
+
+
 {% block content %}
 
 <section class="content-section padding-y bg">
@@ -119,4 +124,8 @@
                         
 
 {% endblock content %}
+
+
+{% block extra_js %}
+{% endblock %}
 ```
