--- a/templates/products/checkout.html
+++ b/templates/products/checkout.html
@@ -12,7 +12,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Checkout Details</h4>
-                        <form method="POST" action="">
+                        <form method="POST" action="{% url 'checkout_securely' %}">
                             {% csrf_token %}
                             <div class="form-row">
                                 <div class="form-group col">
@@ -22,7 +22,7 @@
                                 </div>
                                 <div class="form-group col">
                                     <label for="">Last Name</label>
-                                    <input type="text" class="form-control" name="first_name"
+                                    <input type="text" class="form-control" name="last_name"
                                         value="{{ user.last_name }}" required>
                                 </div>
                             </div>
@@ -39,11 +39,11 @@
                             <div class="form-row">
                                 <div class="form-group col">
                                     <label for="">Address Line 1</label>
-                                    <input type="text" class="form-control" name="address_line_1" value=" " required>
+                                    <input type="text" class="form-control" name="address1" value=" " required>
                                 </div>
                                 <div class="form-group col">
                                     <label for="">Address Line 2</label>
-                                    <input type="text" class="form-control" name="address_line_2" value=" ">
+                                    <input type="text" class="form-control" name="address2" value=" ">
                                 </div>
                             </div>
                             <div class="form-row">
@@ -61,11 +61,11 @@
                                 </div>
                                 <div class="form-group col">
                                     <label for="">Postal Code</label>
-                                    <input type="text" class="form-control" name="post_code" value=" " required>
+                                    <input type="text" class="form-control" name="zipcode" value=" " required>
                                 </div>
                             </div>
                         </div>
-                    </form>
+                    
                     </div>
             </aside>
 
@@ -121,8 +121,9 @@
                             </tbody>
                         </table>
 
-                        <a href="#" class="btn btn-dark btn-block"> Checkout Securely </a>
+                        <button type="submit" class="btn btn-dark btn-block"> Checkout Securely </button>
                         <a href="{% url 'products' %}" class="btn btn-light btn-block">Continue Shopping</a>
+                    </form>
                     </div>
                 </div>
             </aside>
