style alluth templates

--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -1,15 +1,31 @@
 {% extends "account/base.html" %}
-
 {% load i18n %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+{% block extra_css %}
+<style>
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
 
+    .password_change {
+        max-width: 330px;
+        padding: 15px;
+    }
+</style>
+{% endblock %}
+
+{% block content %}
+<div class="container">
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
+        <h1 class="h3 mb-3 font-weight-normal text-center">{% trans "Change Password" %}</h1>
         {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
+</div>
 {% endblock %}
