--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -1,21 +1,46 @@
 {% extends "account/base.html" %}
-
 {% load i18n %}
 
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
+{% block extra_css %}
+<style>
+    /* Add your CSS styles here */
+    .sign_out {
+        display: flex;
+        flex-direction: column;
+        max-width: 400px;
+        margin: 0 auto;
+    }
+
+    .sign_out button {
+        background-color: red;
+        color: white;
+        border: none;
+        padding: 10px;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        width: 100%;
+    }
+
+    .sign_out button:hover {
+        background-color: darkred;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
-<h1>{% trans "Sign Out" %}</h1>
+    <div class="container mb-5">
+        <h1 class= text-center>{% trans "Sign Out" %}</h1>
+        <p class= text-center>{% trans 'Are you sure you want to sign out?' %}</p>
 
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
-
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
-
+        <form method="post" action="{% url 'account_logout' %}" class="sign_out">
+            {% csrf_token %}
+            {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+            {% endif %}
+            <button type="submit">{% trans 'Sign Out' %}</button>
+        </form>
+    </div>
 {% endblock %}
