--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -1,24 +1,66 @@
 {% extends "account/base.html" %}
-
 {% load i18n %}
 {% load account %}
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
+{% block extra_css %}
+<style>
+    .password_reset {
+        display: flex;
+        flex-direction: column;
+        max-width: 400px;
+        margin: 0 auto;
+    }
+
+    .password_reset input[type="email"] {
+        margin-bottom: 10px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .password_reset input[type="submit"] {
+        background-color: black;
+        color: white;
+        border: none;
+        padding: 10px;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+        width: 100%;
+    }
+
+    .password_reset input[type="submit"]:hover {
+        background-color: #0056b3;
+    }
+
+    .account {
+        margin-bottom: 100px;
+        margin-top: 100px;
+    }
+</style>
+{% endblock %}
+
 {% block content %}
 
-    <h1>{% trans "Password Reset" %}</h1>
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+    <div class="container account">
+        <h1 class="text-center">{% trans "Password Reset" %}</h1>
+        {% if user.is_authenticated %}
+            {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
 
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+        <p class = "text-center">{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
-    </form>
+        <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="{% trans 'Reset My Password' %}" />
+        </form>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+        <p class = "text-center">{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    </div>
+
 {% endblock %}
