--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -1,23 +1,42 @@
 {% extends "account/base.html" %}
-
 {% load i18n %}
+
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
+{% block extra_css %}
+<style>
+    
 
-    {% if token_fail %}
-        {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-    {% else %}
-        {% if form %}
-            <form method="POST" action="{{ action_url }}">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
-            </form>
+    .password_change {
+        margin-top: 50px;
+        margin-bottom: 50px;
+        padding: 20px;
+        border: 1px solid #e5e5e5;
+        border-radius: 5px;
+        text-align: center;
+    }
+</style>
+{% endblock %}
+
+{% block content %}
+<div class="container account mb-5">
+    <div class="password_change">
+        <h2 class="text-center">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+
+        {% if token_fail %}
+            {% url 'account_reset_password' as passwd_reset_url %}
+            <p class="text-center">{% blocktrans %}The password reset link was invalid, possibly because it has already been used. Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
         {% else %}
-            <p>{% trans 'Your password is now changed.' %}</p>
+            {% if form %}
+                <form method="POST" action="{{ action_url }}">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" class="btn btn-dark" name="action" value="{% trans 'change password' %}"/>
+                </form>
+            {% else %}
+                <p>{% trans 'Your password is now changed.' %}</p>
+            {% endif %}
         {% endif %}
-    {% endif %}
+    </div>
+</div>
 {% endblock %}
