--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -3,7 +3,13 @@
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
+{% block extra_css %}
+{% endblock %}
+
+
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+<div class="container mb-5">
+    <h1 class="text-center">{% trans "Change Password" %}</h1>
+    <p class="text-center">{% trans 'Your password is now changed.' %}</p>
+</div>
 {% endblock %}
