add product gallery to each product, remove styles from allauth

--- a/templates/products/cart.html
+++ b/templates/products/cart.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-<section class="content-section padding-y bg">
+<section class="content-section padding-y bg mb-5">
     <div class="container">
 
         {% if not cart_items %}
@@ -128,4 +128,3 @@
 
 {% block extra_js %}
 {% endblock %}
-```
