--- a/templates/products/checkout.html
+++ b/templates/products/checkout.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<section class="content-section bg">
+<section class="content-section bg mb-5">
     <div class="container">
 
 
@@ -57,7 +57,7 @@
                                 </div>
                                 <div class="form-group col">
                                     <label for="">State</label>
-                                    <input type="text" class="form-control" name="state" value=" " required>
+                                    <input type="text" class="form-control" name="state" value=" " >
                                 </div>
                                 <div class="form-group col">
                                     <label for="">Postal Code</label>
