--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -9,11 +9,20 @@
             <div class="row no-gutters">
                 <aside class="col-md-6">
                     <article class="gallery-wrap">
-                        <div class="img-big-wrap">
-                            <div> <a href="#"><img src="{{ single_product.image.url }}" alt="Image"></a></div>
+                        <div class="img-big-wrap main-image">
+                            <img src="{{ single_product.image.url }}" alt="Image">
                         </div>
                     </article>
+                    <ul class="main-image-thumbnail">
+                        <li>
+                            <a href="{{ single_product.image.url }}" target="main-image"><img src="{{ single_product.image.url }}" alt="Product image"></a>
+                            {% for image in product_gallery %}
+                            <a href="{{image.image.url}}" target="main-image"><img src="{{image.image.url}}" alt="Product image"></a>
+                            {% endfor %}
+                        </li>
+                    </ul>
                 </aside>
+                
 
                 <main class="col-md-6 border-left">
                     <form action="{% url 'add_to_cart' single_product.id %}" method="POST">
