final touches and documentations

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>DripDrop {% block extra_title %}{% endblock %}</title>
-
+    <title>DripDrop - Your Destination for Sneakers, Tracksuits, and Designer Apparel {% block extra_title %}{% endblock %}</title>
+    <meta name="description" content="Discover the latest trends in sneakers, tracksuits, and designer apparel at DripDrop. Explore our curated collection of premium footwear and fashion essentials.">
+    <meta name="keywords" content="sneakers, tracksuits, designer apparel, footwear, fashion, streetwear, lifestyle, trends, dunks, jordans, nike, trapstar, louis vuitton, jewelry, gucci, adidas, puma, yeezy, street style, urban fashion, clothing, accessories, luxury, sportswear, activewear, hats, caps, sunglasses, watches, bags, backpacks, belts, wallets, hoodies, jackets, t-shirts, pants, shorts, joggers, leggings, dresses, skirts, online shopping, limited stock, hard to get, limited editions">    <meta name="author" content="Omar Al-mehdhar">
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -28,7 +29,7 @@
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
     <!-- Favicon -->
-    <link rel="icon" href="" type="image/x-icon">
+    <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
 
 
     {% block extra_css %}
