--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -27,7 +27,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">My Total Orders</h5>
                                         <p class="card-text">You have placed a total of {{order_count}} orders.</p>
-                                        <a href="#" class="btn btn-outline-dark">View Order History</a>
+                                        <a href="{% url 'order_history' %}" class="btn btn-outline-dark">View Order History</a>
                                     </div>
                                 </div>
                             </div>
