--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,21 +1,20 @@
 {% load static %}
-<!-- Footer Section -->
 <footer class="section-footer border-top bg-light padding-y mt-auto">
     <div class="container">
         <section class="footer-bottom border-top row">
             <div class="col-md-4">
-                <p class="text-muted">&copy; 2023 Your Luxury Brand</p>
+                <p class="text-muted">&copy; 2024 DRIPDROP</p>
             </div>
             <div class="col-md-4 text-center">
-                <span class="px-2">info@luxurybrand.com</span>
-                <span class="px-2">123-456-7890</span>
+                <span class="px-2">info.dripdrop.se@gmail.com.com</span>
+                <span class="px-2">+46 729162986</span>
                 <span class="px-2">Luxury Street, City</span>
             </div>
             <div class="col-md-2 text-right">
-                <a href="https://www.facebook.com/YourLuxuryBrand" target="_blank" class="text-muted px-2">
+                <a href="https://www.facebook.com/" target="_blank" class="text-muted px-2">
                     <i class="fab fa-facebook-f fa-lg"></i>
                 </a>
-                <a href="https://www.instagram.com/YourLuxuryBrand" target="_blank" class="text-muted px-2">
+                <a href="https://www.instagram.com/" target="_blank" class="text-muted px-2">
                     <i class="fab fa-instagram fa-lg"></i>
                 </a>
             </div>
@@ -25,5 +24,5 @@
                 <i class="fab fa-cc-mastercard fa-lg text-muted"></i>
             </div>
         </section>
-    </div><!-- //container -->
+    </div>
 </footer>
