--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,10 +10,10 @@
             <div class="collapse navbar-collapse" id="navbarTop">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#"><i class="fa fa-envelope"></i> Email Us</a>
+                        <a class="nav-link text-white" href="mailto: info.dripdrop.se@gmail.com.com"><i class="fa fa-envelope"></i> Email Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#"><i class="fa fa-phone"></i> Call Us</a>
+                        <a class="nav-link text-white" href="tel:+46729162986"><i class="fa fa-phone"></i> Call Us</a>
                     </li>
                 </ul>
             </div>
