--- a/templates/orders/success.html
+++ b/templates/orders/success.html
@@ -29,21 +29,10 @@
                                 <p class="card-text mb-0">{{order.state}} </p>
                             </div>
                         </div>
-                        <h4>Items Purchased:</h4>
-                        <ul class="list-group">
-                            {% for item in cart_items %}
-                            <li class="list-group-item">
-                                <div class="row">
-                                    <div class="col-md-6">{{ item.product.name }}</div>
-                                    <div class="col-md-3">{{ item.quantity }} x ${{ item.product.price }}</div>
-                                    <div class="col-md-3 text-right">${{ item.get_total }}</div>
-                                </div>
-                            </li>
-                            {% endfor %}
-                        </ul>
+                        
                         <p class="text-right"><strong>Total:</strong> ${{ payment.amount_paid }}</p>
                         <hr>
-                        <p>We appreciate your business. If you have any questions or concerns, feel free to <a href="">contact us</a>.</p>
+                        <p>We appreciate your business. If you have any questions or concerns, feel free to <a href="mailto: info.dripdrop.se@gmail.com.com">contact us</a>.</p>
                         <p>Happy shopping!</p>
                     </div>
                 </div>
